fix modal overflow cutoff issue

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -229,8 +229,6 @@ textarea {
   width:100%;
   height: 100%;
   z-index: -1;
-  position: fixed;
-  overflow-y: scroll;
 }
 
 #iframe_a {
